# KatFC

./: .gitignore  .gitmodules  LICENSE  README.md  kfc.code-workspace
docs/doxygen/: Doxyfile
flightControl/: CMakeLists.txt  version.h.in
flightControl/cmake/: CANopen-STM32H7.cmake  FreeRTOS-STM32H7.cmake  STM32H750B-DK.cmake
flightControl/src/: CMakeLists.txt
flightControl/src/ao/: app_active.hpp  kfa.hpp  kfacore.hpp
flightControl/src/ao/os/: ao_freertos.cpp  ao_freertos.hpp
flightControl/src/app/: app_canopen.cpp  app_canopen.hpp  app_freertos.c  app_freertos.h  bsp.cpp  bsp.hpp  fdcan.c  main.c  main.cpp  orig_main.c
hardware/boards/stm32/STM32H750B-DK/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
hardware/boards/stm32/STM32H750B-DK/Src/: fdcan.c  gpio.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  tim.c
